--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -17,7 +17,7 @@ results <- readRDS("../local/paper-results.rds")
 
 ## Abstract
 
-Much of the richness of human thought is supported by people’s intuitive theories---explanatory mental frameworks that capture the perceived causal and relational structure of the world. But serious consequences can arise when these theories are mistaken. In this paper, we take up an important example of the consequences of faulty intuitive theories: when misconceptions about vaccine safety discourage vaccination. We argue that addressing misconceptions like these requires awareness of the broader conceptual context in which they are embedded. We present a cognitive model of the intuitive theory surrounding vaccination decisions, which we developed by identifying a set of relevant beliefs, surveying a large sample of U.S. adults, and applying Bayesian network structure learning algorithms to their responses (Study 1). We then apply this model to understand belief revision within this larger conceptual system. We found that our model helped to explain belief revision following an established educational intervention (Study 2), provided insight that supported our formulation of a novel educational intervention that successfully increased vaccination intentions (Studies 3a, 3b), and also helped to explain how people’s beliefs changed following real-world events (Study 4). Taken together, this work illustrates the promise of understanding belief revision in terms of intuitive theories and of discovering and formalizing intuitive theories via computational models. Moreover, it lays the foundation for theory-based educational interventions that could encourage people to vaccinate their children and themselves against dangerous diseases like measles and COVID-19.
+Much of the richness of human thought is supported by people’s intuitive theories---explanatory mental frameworks that capture the perceived causal and relational structure of the world. But serious consequences can arise when these theories are mistaken. In this paper, we take up an important example of the consequences of faulty intuitive theories: when misconceptions about vaccine safety discourage vaccination. We argue that addressing misconceptions like these requires awareness of the broader conceptual context in which they are embedded. We present a cognitive model of the intuitive theory surrounding vaccination decisions, which we developed by identifying a set of relevant beliefs, surveying a large sample of U.S. adults, and applying Bayesian network structure learning algorithms to their responses (Study 1). We then apply this model to understand belief revision within this larger conceptual system. Our model helped to explain belief revision following an established educational intervention (Study 2), provided insight that supported our formulation of a novel educational intervention that successfully increased vaccination intentions (Studies 3a, 3b), and also helped to explain how people’s beliefs changed following real-world events (Study 4). Taken together, this work illustrates the promise of understanding belief revision in terms of intuitive theories and of discovering and formalizing intuitive theories via computational models. Moreover, it lays the foundation for theory-based educational interventions that could encourage people to vaccinate their children and themselves against dangerous diseases like measles and COVID-19.
 
 ## Significance Statement
 
@@ -25,7 +25,7 @@ When people decide whether to vaccinate their children and themselves against da
 
 \newpage
 
-One remarkable feature of human psychology is our ability to form rich mental representations of what is true, how things work, and how best to navigate the world around us. Much of this type of thinking can be understood as deriving from people’s *intuitive theories*---explanatory frameworks, analogous to scientific theories, that capture the causal and logical structure of the world within a domain. From early in life, people are driven to seek out such causal explanations and to use their mental representations of these causal systems to explain, predict, and intervene in the world [see @carey2009; @gelman.legare2011; @gerstenberg.etal2021; @gopnik.wellman1994; @keil1994; @murphy.medin1985; @wellman.gelman1992 for influential treatments of this topic].  Intuitive theories inform reasoning in a wide variety of domains, from reasoning about physical systems [e.g., @baillargeon2004; @battaglia.etal2013; @spelke1994a; @ullman.etal2017], biological processes [e.g., @carey1985; @carey2009; @medin.atran1999] andthe contents of other people’s minds [e.g., @gopnik.wellman1994; @wellman2015; @baker.etal2017].
+One remarkable feature of human psychology is our ability to form rich mental representations of what is true, how things work, and how best to navigate the world around us. Much of this type of thinking can be understood as deriving from people’s *intuitive theories*---explanatory frameworks, analogous to scientific theories, that capture the causal and logical structure of the world within a domain. From early in life, people are driven to seek out such causal explanations and to use their mental representations of these causal systems to explain, predict, and intervene in the world [see @carey2009; @gelman.legare2011; @gerstenberg.etal2021; @gopnik.wellman1994; @keil1994; @murphy.medin1985; @wellman.gelman1992 for influential treatments of this topic].  Intuitive theories inform reasoning in a wide variety of domains, including reasoning about physical systems [e.g., @baillargeon2004; @battaglia.etal2013; @spelke1994a; @ullman.etal2017], biological processes [e.g., @carey2009; @carey1985; @medin.atran1999] and the contents of other people’s minds [e.g., @gopnik.wellman1994; @wellman2015; @baker.etal2017].
 
 Because intuitive theories are powerful tools for making sense of the world, when these theories are mistaken there can be serious consequences. In this paper, we focus on an important and timely example: misconceptions about vaccine safety. 
 
@@ -35,7 +35,7 @@ The difficulty of convincing people to vaccinate themselves and their children i
 
 Consider some of the beliefs people who are skeptical of childhood vaccination expressed when we asked them to explain their views in an open-ended qualitative survey (conducted pre-pandemic; *n* = 16). Several participants saw vaccines as "unnatural" and expressed concerns about toxic additives in vaccines, such as heavy metals and mercury. One said, “Vaccines are unnatural additions to the body. The human body should naturally fight off the disease and we should not be controlling how nature plays its role on mankind.” Some doubted whether certain diseases were worth worrying over, while others feared that the contents of vaccines “are too strong and too concentrated for a baby's body to properly handle.” A number of respondents were skeptical of the medical community’s objectivity in testing the safety of vaccines. One respondent wrote that vaccines were “A BIG MONEY MAKING SCAM BY THE BIG PHARMS” (emphasis theirs); another thought that health professionals “are brainwashed by the medical media and the government.” To people holding these beliefs, it could well seem unreasonable to vaccinate a 2-month-old baby against 5 or more diseases at once. Moreover, if skeptics believe that the medical community is unduly influenced by pharmaceutical companies, they might doubt the validity of medical studies coming out in favor of these companies’ interests. Altogether, these beliefs might sustain misconceptions about vaccine safety, even in the face of counter-evidence.
 
-The way in which evidence affects any particular belief is unavoidably shaped by other interrelated beliefs. Duhem [-@duhem1954] and Quine [-@quine1951] famously argued that scientific theories necessarily incorporate *auxiliary hypotheses* that influence how observations are interpreted: When an observation is inconsistent with a hypothesis under certain auxiliary assumptions, a scientist cannot necessarily know whether to revise the hypothesis or the auxiliary assumptions. Similarly, we argue that intuitive theories incorporate auxiliary beliefs that affect how other beliefs are revised in light of evidence [also see @gershman2019]. 
+The way in which evidence affects any particular belief is unavoidably shaped by other interrelated beliefs. Duhem [-@duhem1954] and Quine [-@quine1951] famously argued that scientific theories necessarily incorporate *auxiliary hypotheses* that influence how observations are interpreted: When an observation is inconsistent with a hypothesis under certain auxiliary assumptions, a scientist cannot know whether to revise the hypothesis or the auxiliary assumptions. Similarly, we argue that intuitive theories incorporate auxiliary beliefs that affect how other beliefs are revised in light of evidence [also see @gershman2019]. 
 
 Here we present a line of theoretical and empirical work that seeks to understand misconceptions and belief revision in the context of people’s intuitive theories. We focus on reducing hesitancy toward childhood vaccination by identifying intuitive theories surrounding these vaccination decisions. Through this case study we hope to shed light on why such misconceptions persist and how interventions might address misconceptions more effectively across domains. 
 
@@ -55,15 +55,13 @@ Here, we sought to formalize this understanding of intuitive theories by represe
 
 For example, the graph $\text{FIRE} \rightarrow \text{SMOKE}$ represents a Bayesian network capturing the understanding  that fire causes smoke. The example of cause and effect is especially intuitive, but edges in a Bayesian network need not be causal; they are better thought of as representing “influence relations,” which may also include relationships like logical implication and set membership [@williamson2001]. This influence relationship is represented as a probabilistic function, where the probability of smoke depends on the probability of fire. 
 
-This model captures each of the qualitative features laid out above: First, it captures people’s  reasoning  about these states of affairs given observations: observing smoke would lead someone to infer that there is likely to be a fire, and observing fire would lead someone to predict smoke will soon follow (Feature 1). This model can also capture how these beliefs might covary across individuals: if two people hold different degrees of belief in FIRE, this model specifies the degree of belief each should have in SMOKE (Feature 2). Moreover, both the correlation in beliefs across individuals and the change in beliefs given observations are determined by the conditional probability of SMOKE given FIRE. Thus, changes in beliefs following evidence will be proportional to their correlations across individuals (Feature 3). Formulating these features in a formal model, rather than a verbal theory, allows us to specify not just the presence but the quantitative strength of these relations, and to simulate the cumulative influences of many factors in more complex networks (for example, incorporating beliefs about the frequency of wildfires, recent weather conditions, etc.).    
+This model captures each of the qualitative features laid out above: First, it captures people’s  reasoning  about these states of affairs given observations: observing smoke would lead someone to infer that there is likely to be a fire, and observing fire would lead someone to predict smoke will soon follow (Feature 1). This model can also capture how these beliefs might covary across individuals: if two people hold different degrees of belief in FIRE, this model specifies the degree of belief each should have in SMOKE (Feature 2). Because the condition probability of SMOKE given FIRE determines both the change in beliefs given observations and the correlation in beliefs across individuals, changes in beliefs following evidence will be proportional to their correlations across individuals (Feature 3). Formulating these features in a formal model, rather than a verbal theory, allows us to specify not just the presence but the quantitative strength of these relations, and to simulate the cumulative influences of many factors in more complex networks (for example, incorporating beliefs about the frequency of wildfires, recent weather conditions, etc.).    
 
 Where the structure of an intuitive theory is known, Bayesian networks thus offer powerful tools for predicting and understanding how evidence will affect people's beliefs. However, there are many cases where the structure of the intuitive theory is itself the very question under investigation. Consider vaccine hesitancy: Earlier, we speculated that beliefs about the infant immune system and beliefs about the trustworthiness of the medical community (among many others) might affect people’s beliefs about vaccines. But the structure of the intuitive theory that might relate these beliefs is not at all clear. 
 
 Fortunately, the formalism of Bayesian networks provides tools for navigating these challenges. Roughly, when the relationships among beliefs are unknown, we can use the qualitative features of intuitive theories to *infer* the structure of an intuitive theory from observed correlations among beliefs. Structure learning algorithms [see @scutari.denis2021] provide a means for searching through the (super-exponentially large) possible space of Bayesian networks to find the structure most likely to have generated some observed data. These approaches allow us to scale the Bayesian network modelling framework beyond the simple models characteristic of early computational work on intuitive theories [e.g., @griffiths.tenenbaum2005].
 
 Here, we used Bayesian network structure learning algorithms to construct a model of the intuitive theory underlying adults’ decisions about whether or not to vaccinate children against diseases like measles, mumps, and rubella.
-
-# Current studies
 
 In Study 1, we used Bayesian network structure learning algorithms to develop a cognitive model of the relationships among 14 beliefs related to vaccine hesitancy in a large sample of people. In Study 2, we replicated the success of an existing intervention emphasizing the dangers of childhood diseases [@horne.etal2015] and used our model to provide a more detailed understanding of *how and why* this intervention increases vaccine intentions and its effects on related beliefs. In Study 3a and 3b, we drew inspiration from our model to create and validate the success of  a novel intervention aimed at debunking concerns about toxic additives. Finally, in Study 4 we tested whether people's beliefs changed coherently following relevant real-world events, by examining beliefs before and after serious outbreaks of measles in the United States in early 2019. Taken together, this work illustrates the promise of understanding belief revision in terms of intuitive theories and the utility of discovering and formalizing intuitive theories via computational models. And, it lays the foundation for empirically-validated, theory-based educational interventions that could encourage people to vaccinate their children and themselves against dangerous diseases like measles and COVID-19.
 
@@ -79,13 +77,13 @@ We developed psychometrically robust scales to measure these beliefs, then admin
 
 #### Structure learning 
 
-We used these intercorrelations to build a cognitive model of the relations among these beliefs using Bayesian network structure learning techniques, using an 80% training split of the data (*n* = 904). Based on the observed associations among participants' beliefs about each of theses issues, we sought to infer how these states of affairs (e.g., that vaccines are dangerous, that diseases are severe) are connected in people's intuitive theories---how people understand these states of affairs to cause, imply, or otherwise influence one another. 
+We used these intercorrelations to build a cognitive model of the relations among these beliefs via Bayesian network structure learning techniques, using an 80% training split of the data (*n* = 904). Based on the observed associations among participants' beliefs about each of theses issues, we sought to infer how these states of affairs (e.g., that vaccines are dangerous, that diseases are severe) are connected in people's intuitive theories---how people understand these states of affairs to cause, imply, or otherwise influence one another. 
 
 We assumed  that the intuitive theory is a generative model, so that these influence relations (“edges”) should flow from causes or other “generating” states of affairs toward effects. For instance, we stipulated that *vaccine intentions* would be a “child node,” with edges only flowing inwards and not outwards (since one’s intention to vaccinate cannot “generate” the facts about vaccinations safety, effectiveness, etc). These constraints and their consequences are considered in more detail in Methods.
 
 Applying these techniques resulted in an estimate of the network shown in Figure 1. 
 
-```{r fig1-maingraph, fig.align='center', fig.height=8, fig.width=5, fig.cap="Bayesian network model resulting from hill-climbing algorithm applied to data in Study 1 training test split (n = 904). The network has 29 edges connecting these 14 variables. Edge polarity and weights are indicated by color, with red hues indicating negative or preventive influences, and blue hues indicating positive or generating influences. The direction of the edge was not determinable from the data and modeling constraints for two edges: $\\text{Naturalism} \\rightarrow \\text{Holistic Balance}$ and $\\text{Medical Skepticism} \\rightarrow \\text{Parental Expertise}$; see SI."}
+```{r fig1-maingraph, fig.align='center', fig.height=8, fig.width=5, fig.cap="Bayesian network model resulting from hill-climbing algorithm applied to data in Study 1 training split (n = 904). The network has 29 edges connecting these 14 variables. Edge polarity and weights are indicated by color, with red hues indicating negative or preventive influences, and blue hues indicating positive or generating influences. The direction of the edge was not determinable from the data and modeling constraints for two edges: $\\text{Naturalism} \\rightarrow \\text{Holistic Balance}$ and $\\text{Medical Skepticism} \\rightarrow \\text{Parental Expertise}$; see SI."}
 
 knitr::include_graphics("../outputs/main-combined.pdf")
 ```
@@ -145,7 +143,7 @@ One advantage of having developed a formal, computational representation of a ne
 knitr::include_graphics("../local/pred_change_plt.png")
 ```
 
-We developed a novel educational intervention that addresses fears about toxic additives in vaccines. This "vaccine ingredients" intervention explained the common components of vaccines, emphasized the minute quantities of all vaccine ingredients, and explained the roles that various vaccine additives play in ensuring the stability and safety of vaccines, such as antibiotics, adjuvants, and stabilizers. We gave special attention to defusing concerns about the use of formaldehyde in vaccines because our assessment of anti-vaccination websites suggested that this was a particular concern for many vaccine skeptics. The intervention acknowledged that some vaccines contain trace amounts of formaldehyde, but pointed out that formaldehyde is a metabolic byproduct that occurs naturally in all living things. The intervention highlights that formaldehyde is already present in children’s bodies (and even in foods like pears) in far larger quantities than contained in any vaccine. The full intervention text can be found in SI. 
+We developed a novel educational intervention that addresses fears about toxic additives in vaccines. This "vaccine ingredients" intervention explained the common components of vaccines, emphasized the minute quantities of all vaccine ingredients, and explained the roles that various vaccine additives play in ensuring the stability and safety of vaccines, such as antibiotics, adjuvants, and stabilizers. We gave special attention to defusing concerns about the use of formaldehyde in vaccines because our assessment of anti-vaccination websites suggested that this was a particular concern for many vaccine skeptics. The intervention acknowledged that some vaccines contain trace amounts of formaldehyde, but pointed out that formaldehyde is a metabolic byproduct that occurs naturally in all living things. The intervention highlighted that formaldehyde is already present in children’s bodies (and even in foods like pears) in far larger quantities than contained in any vaccine. The full intervention text can be found in SI. 
 
 We conducted two preregistered experiments (3a and 3b) testing the effects of this novel intervention using the same pretest-posttest design as Study 2. Collapsing across these two studies, Figure 5 shows the change in participants’ (*n* = `r results$s3$demo$n_complete`) attitudes across all 14 belief scales from pretest to posttest. Most importantly, the vaccine ingredients intervention significantly improved participants’ vaccination intentions compared to the no-intervention control condition. Changes were also evident across many of the 14 beliefs, with the largest changes being a reduction in vaccine toxicity beliefs. 
 
@@ -165,11 +163,11 @@ Nevertheless, the success of this intervention in changing people’s responses 
 
 The early months of 2019 saw the worst U.S. measles outbreak in decades, with over 1000 cases reported by June, mostly in the state of New York. These outbreaks were covered in every major newspaper and by every major news program. Would learning about these tragic events lead people to revise their beliefs about vaccines?
 
-```{r fig6-s4, fig.align='center', fig.height=4, fig.width=7, fig.cap="Participants’ belief changes from participation in Study 1 to Study 4. Left, mean difference scores comparing beliefs reported in September 2017 and May 2019 for the 14 belief scales, across participants who did and did not report exposure to news of the ongoing New York measles outbreak. Right, mean observed and model predicted change scores for those participants who did report exposure to this news. Belief changes were modeled assuming that news of the outbreak directly impacted participant's vaccine intentions, the most central of the 14 beliefs, in order to evaluate the overall coherence of these belief changes. In both plots, changes were calculated after transforming responses to lie between 0 and 1 and error bars represent 95\\% confidence intervals."}
+```{r fig6-s4, fig.align='center', fig.height=4, fig.width=7, fig.cap="Participants’ belief changes from participation in Study 1 to Study 4. Left, mean difference scores comparing beliefs reported in August-September 2017 and May 2019 for the 14 belief scales, across participants who did and did not report exposure to news of the ongoing New York measles outbreak. Right, mean observed and model predicted change scores for those participants who did report exposure to this news. Belief changes were modeled assuming that news of the outbreak directly impacted participant's vaccine intentions, the most central of the 14 beliefs, in order to evaluate the overall coherence of these belief changes. In both plots, changes were calculated after transforming responses to lie between 0 and 1 and error bars represent 95\\% confidence intervals."}
 knitr::include_graphics("../local/s4_plt.png")
 ```
 
-To examine this possibility, we invited participants from Study 1 (conducted in September 2017) to participate in a new study measuring each of those 14 beliefs again (conducted on May 1st, 2019; approximately 18 months later). Of the `r results$s1$demo$n_include` participants in Study 1, `r results$s4$demo$n_complete` returned and completed the study. Approximately `r round(100*(results$s4$demo$n_news/results$s4$demo$n_complete),0) `% of participants reported recently seeing, hearing, or reading about measles outbreaks.
+To examine this possibility, we invited participants from Study 1 (conducted in August-September 2017) to participate in a new study measuring each of those 14 beliefs again (conducted on May 1st, 2019; approximately 18 months later). Of the `r results$s1$demo$n_include` participants in Study 1, `r results$s4$demo$n_complete` returned and completed the study. Approximately `r round(100*(results$s4$demo$n_news/results$s4$demo$n_complete),0) `% of participants reported recently seeing, hearing, or reading about measles outbreaks.
 
 Figure 6 shows the average change in participants’ beliefs following the outbreaks of 2019. Among participants who were exposed to relevant news covered, we observed changes in a number of beliefs, with notable increases in intentions to vaccinate, perceptions of vaccine efficacy, and perceptions of disease severity, as well as notable decreases in concern about vaccine danger. In contrast, most beliefs remained unchanged for those participants who did not report exposure to media, although there were modest changes in their beliefs about disease severity and disease rarity. These outbreaks appear to have significantly impacted people’s beliefs surrounding vaccination.
 
@@ -197,13 +195,13 @@ Intuitive theories are powerful cognitive tools, for better and for worse. Coher
 
 ## Qualitative studies and scale development
 
-We drew on a variety of sources, including academic articles on anti-vaccine skepticism [e.g.,  @dube.etal2015; @larson.etal2015; @salmon.etal2015; @williams2014], anti-vaccine websites, and a qualitative survey with self-identified vaccine skeptics (*n*=16) via Amazon Mechanical Turk (MTurk) to generate a list of beliefs that might influence people’s decisions about whether to vaccinate their children (*vaccine intentions*): *vaccine danger*, *toxic additives in vaccines*, *vaccine effectiveness*, *disease rarity*, *disease severity, infant immune system (IIS): weakness*, *IIS: limited capacity*, *IIS: vaccines strain*, *parental protectiveness*, *parental expertise*, *medical skepticism*, *naturalism*, and *holistic balance*. (See main text for descriptions, and SI for the items included in these scales.) We translated these qualitative insights into 14 psychometrically-valid scales; each scale measured agreement with 4-6 statements, including at least one reverse-coded item, and was highly reliable (All Cronbach’s $\alpha \geq .73$). We developed 13 of these scales, and included one preexisting scale [the “holistic balance” subscale from @mcfadden.etal2010].
+We drew on a variety of sources, including academic articles on anti-vaccine skepticism [e.g.,  @dube.etal2015; @larson.etal2015; @salmon.etal2015; @williams2014], anti-vaccine websites, and a qualitative survey with self-identified vaccine skeptics (*n*=16) via Amazon Mechanical Turk (MTurk) to generate a list of beliefs that might influence people’s decisions about whether to vaccinate their children (*vaccine intentions*): *vaccine danger*, *toxic additives in vaccines*, *vaccine effectiveness*, *disease rarity*, *disease severity, infant immune system (IIS): weakness*, *IIS: limited capacity*, *IIS: vaccines strain*, *parental protectiveness*, *parental expertise*, *medical skepticism*, *naturalism*, and *holistic balance*. (See main text for descriptions, and SI for the items included in these scales.) We translated these qualitative insights into 14 psychometrically-valid scales; each scale measured agreement with 4-6 statements, including at least one reverse-coded item, and was highly reliable (observed reliability, Study 1: all Cronbach’s $\alpha \geq .73$). We developed 13 of these scales, and included one preexisting scale [the “holistic balance” subscale from @mcfadden.etal2010].
 
 These 14 scales formed the backbone of Studies 1-4.
 
 ## General Methods: Studies 1-4
 
-Studies 1-4 were conducted online via Amazon Mechanical Turk. Repeat participation was prevented, with no participants involved in more than one study, except as noted in Study 4. A breakdown of demographics and compensation by study is available in the SI.
+Studies 1-4 were conducted online via Amazon Mechanical Turk between August 2017 and June 2019. Repeat participation was prevented, with no participants involved in more than one study, except as noted in Study 4. A breakdown of demographics and compensation by study is available in the SI.
 
 All participants responded at least once to the 14 belief scales just described. Each scale was presented on a separate survey page, and participants rated a series of statements on a 7-point scale from “Strongly disagree” (coded as -3) to “Strongly agree” (+3). Scales, and questions within each scale, were presented in a random order for each participant. Attention checks (e.g., “Please select somewhat agree”) were embedded within two to four randomly chosen scales and participants who failed any of these checks were excluded from analyses.
 
@@ -299,7 +297,7 @@ Study 3a and 3b tested the effects of a novel intervention aimed at dispelling c
 s3_reg <- summary(results$s3$reg)
 ```
 
-As they shared the same design, we combined data from studies 3a and 3b for analysis. As in study 2, we conducted a mixed-effects Bayesian ordinal regression to assess the effects of the vaccine toxins intervention on participants’ *vaccination intentions* scores. The vaccine toxins intervention improved participant’s vaccination intention scores relative to the control conditions (interaction effect: $b$ = `r round(s3_reg$fixed[9,1],3)`, 95% CI: [`r round(s3_reg$fixed[9,3], 3)`, `r round(s3_reg$fixed[9,4], 3)`]); see Figure 5, panel A. However, it is worth noting that reliable changes were also observed from pretest to posttest in the control conditions (phase effect: $b$ = `r round(s3_reg$fixed[7,1],3)`, 95% CI: [`r round(s3_reg$fixed[7,3], 3)`, `r round(s3_reg$fixed[7,4], 3)`]), suggesting that these attitudes were also being influenced by other factors during the course of the study.
+As they shared the same design, we combined data from studies 3a and 3b for analysis (but see SI for separate analyses by study). As in study 2, we conducted a mixed-effects Bayesian ordinal regression to assess the effects of the vaccine toxins intervention on participants’ *vaccination intentions* scores. The vaccine toxins intervention improved participant’s vaccination intention scores relative to the control conditions (interaction effect: $b$ = `r round(s3_reg$fixed[9,1],3)`, 95% CI: [`r round(s3_reg$fixed[9,3], 3)`, `r round(s3_reg$fixed[9,4], 3)`]); see Figure 5, panel A. However, it is worth noting that reliable changes were also observed from pretest to posttest in the control conditions (phase effect: $b$ = `r round(s3_reg$fixed[7,1],3)`, 95% CI: [`r round(s3_reg$fixed[7,3], 3)`, `r round(s3_reg$fixed[7,4], 3)`]), suggesting that these attitudes were also being influenced by other factors during the course of the study.
 
 #### Modeling belief revision.
 
@@ -322,7 +320,7 @@ We contacted as many of the `r results$s1$demo$n_include` participants who compl
 s4_reg <- summary(results$s4$reg)
 ```
 
-Mirroring our analyses of interventions, we regressed responses to the *vaccine intentions* scale items on predictors for phase (September 2017 vs. May 2019, dummy-coded), news exposure (dummy-coded with non-exposure as the baseline), and an interaction between phase and news exposure onto participants’ scores, using a Bayesian mixed-effects ordinal regression including random intercepts by subject and item. To assess the effects of recent news exposure on vaccine intentions, we examined the interaction between phase and news exposure. Participants’ vaccine intentions were increased by recent news exposure compared to their responses 18 months ago (interaction effect: $b$ = `r round(s4_reg$fixed[9,1],3)`, 95% CI: [`r round(s4_reg$fixed[9,3], 3)`, `r round(s4_reg$fixed[9,4], 3)`]); see Figure 6, panel A. 
+Mirroring our analyses of interventions, we regressed responses to the *vaccine intentions* scale items on predictors for phase (August-September 2017 vs. May 2019, dummy-coded), news exposure (dummy-coded with non-exposure as the baseline), and an interaction between phase and news exposure onto participants’ scores, using a Bayesian mixed-effects ordinal regression including random intercepts by subject and item. To assess the effects of recent news exposure on vaccine intentions, we examined the interaction between phase and news exposure. Participants’ vaccine intentions were increased by recent news exposure compared to their responses 18 months earlier (interaction effect: $b$ = `r round(s4_reg$fixed[9,1],3)`, 95% CI: [`r round(s4_reg$fixed[9,3], 3)`, `r round(s4_reg$fixed[9,4], 3)`]); see Figure 6, panel A. 
 
 #### Modeling belief revision.
 
