minor paper edit

--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -241,7 +241,7 @@ We used this sorting to induce a partial ordering of these 14 beliefs, stipulati
 
 To conduct an efficient search through the super-exponential space of DAGs, we tested several learning algorithms implemented in the “bnlearn” R package [@scutari2010] and evaluated their performance through cross validation in our training split (see SI). Following this analysis, we chose to fit our model with the score-based “hill-climbing” algorithm, scoring models via the Bayesian Information Criteria, an asymptotic estimate of the likelihood of the data under a given graph structure. This produced the network shown in Figure 1. See SI for more detailed explanations of these modeling choices.
 
-Some caution should be exercised in interpreting the relationships in the network. Due to Bayesian networks' tight connections with structural causal networks, it is tempting to interpret the edges in this network as representing a mental causal model. But, in some cases these relationships are better thought of as probabilistic dependencies or “influence” relations [@williamson2001]. For instance, intuitively we might imagine that vaccines having toxins could cause them to be dangerous and ineffective. These nodes are connected in the model, but the edges between them run in the opposite directions, and therefore do not support a clear causal interpretation. In other cases, our data and explicit constraints do not perfectly identify the directions of the edges. This is the case for two edges (Naturalism $\rightarrow$  Holistic Balance and Medical Skepticism $\rightarrow$ Parental Expertise; see supplemental implementation for details). In both cases, we do not feel it is intuitive which direction the edge should flow in, nor even that it should be directed at all; we might even speculate there is an additional unmeasured variable that connects these beliefs and that would best account for their association. 
+Some caution should be exercised in interpreting the relationships in the network. Due to Bayesian networks' tight connections with structural causal networks, it is tempting to interpret the edges in this network as representing a mental causal model. But, in some cases these relationships are better thought of as probabilistic dependencies or “influence” relations [@williamson2001]. For instance, intuitively we might imagine that vaccines having toxins could cause them to be dangerous and ineffective. These nodes are connected in the model, but the edges between them run in the opposite directions, and therefore do not support a clear causal interpretation. One interpretation is that this edge instead reflects a set membership relation; that toxins are one type of danger vaccines might present. In other cases, our data and explicit constraints do not perfectly identify the directions of the edges. This is the case for two edges (Naturalism $\rightarrow$  Holistic Balance and Medical Skepticism $\rightarrow$ Parental Expertise; see supplemental implementation for details). In both cases, we do not feel it is intuitive which direction the edge should flow in, nor even that it should be directed at all; we might even speculate there is an additional unmeasured variable that connects these beliefs and that would best account for their association. 
 
 Bearing these qualifications in mind, we see this Bayesian network as a limited but plausible cognitive model of these beliefs. 
 
